cleaning and Java 17 adaptations